# Jabutilar

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  testes.txt
backend/app/: main.py  webhooks.py
client/frontend/: .gitignore  Dockerfile  package-lock.json  package.json
client/frontend/client/frontend/: .package-lock.json
client/frontend/components/: Footer.js  GroupForm.js  Header.js  RegisterForm.js  RegisterHeader.js  SocialLogin.js
client/frontend/config/: api.js  oauth.js  supabaseClient.js
client/frontend/pages/: cadastro.js  cadastro_grupo.js  facebook-callback.js  home.js  index.js  main.js
client/frontend/pages/auth/: callback.js
client/frontend/server/backend/: pyproject.toml
client/frontend/server/backend/backend/: app.py  database.py  user.py
client/frontend/server/backend/tests/: conftest.py  test_database.py
client/frontend/styles/: Cadastro.module.css  Footer.module.css  FormFields.module.css  README.md  SocialButtons.module.css  cadastro.module.css  cadastro_grupo.module.css  globals.css  group-form.module.css  header.module.css  register-form.module.css  register-header.module.css  social-login.module.css  utils.module.css
server/backend/: Dockerfile  pyproject.toml
server/backend/backend/: app.py  contas.py  grupo.py  item_compra.py  lista_compras.py  notificacoes.py  schemas.py  social_auth.py  tarefas.py  user.py
server/backend/tests/: conftest.py  test_app.py  test_contas.py  test_grupo.py  test_item_compra.py  test_tasks.py  test_user.py
(+7 files in other folders)
